package name refactored and author name added

--- a/features/artboard/src/main/res/layout/activity_art_board.xml
+++ b/features/artboard/src/main/res/layout/activity_art_board.xml
@@ -26,7 +26,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <com.calyptus.artelement.tools.ArtBoard
+    <com.calyptus.elements.tools.ArtBoard
         android:id="@+id/artBoard"
         android:layout_width="0dp"
         android:layout_height="0dp"
